--- a/package.json
+++ b/package.json
@@ -4,19 +4,21 @@
   "description": "friend finder",
   "main": "server.js",
   "scripts": {
-    "test": "banana",
-    "start": "node server.js"
+    "test": "",
+    "start": "nodemon server.js"
   },
   "author": "Riley Griffin",
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "express-promise-router": "^3.0.3",
     "finalhandler": "^1.1.1",
     "http": "0.0.0",
     "morgan": "^1.9.0",
     "path": "^0.12.7",
     "router": "^1.3.3",
+    "socket.io": "^2.1.1",
     "url": "^0.11.0"
   }
 }
