--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "finalhandler": "^1.1.1",
     "http": "0.0.0",
     "morgan": "^1.9.0",
+    "nodemon": "^1.18.4",
     "path": "^0.12.7",
     "router": "^1.3.3",
     "socket.io": "^2.1.1",
