--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "morgan": "^1.9.0",
     "nodemon": "^1.18.4",
     "path": "^0.12.7",
+    "request": "^2.88.0",
     "router": "^1.3.3",
     "socket.io": "^2.1.1",
     "url": "^0.11.0"
