--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "request": "^2.88.0",
     "router": "^1.3.3",
     "socket.io": "^2.1.1",
+    "supertest": "^3.3.0",
     "url": "^0.11.0"
   }
 }
